test/positive/c.mli
(*@ open Ocamlstdlib *)

open B

type t4 = t3
type t5 = int A.t2

(*@ function f5 (x: 'a A.t2) : A.t1 *)
